--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             &nbsp;
             <li><a href="#"><i class="fab fa-youtube"></i></a></li>
             &nbsp;
-            <button type="tool" class="btn btn-outline-primary">DashBoard</button>
+              <a href="https://melanienadjar.github.io/Sign_in_wideshoot/" class="btn btn-outline-primary">DashBoard</a>
             </ul>
         </div>
       </div>
