--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a class="nav-link active" aria-current="page" href="#">Solution</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tarif</a>
+          <a class="nav-link" href="https://jeffnyaugustin.github.io/Kimberley-WideShoot/">Tarif</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Ressources</a>
